js/js.translator/testData/incremental/invalidation/defaultArgWrapperRemoved/main/m.1.kt
fun box(stepId: Int, isWasm: Boolean): String {
    return if (foo(39) == 42) "OK" else "Fail step1"
}

